--- a/Changelog/Changelog.txt
+++ b/Changelog/Changelog.txt
@@ -41,3 +41,10 @@ fara idei si motivatie din exterior...
 16.08.2020:
 *Music playerul are mai multe functionalitati yay
 *Cam atat tho
+
+26.08.2020:
+*Na iar am uitat sa scriu pe aici
+*Am bagat NPCs
+*Am mai bagat ceva la music player
+*Acum poti vorbi cu alte personaje
+*Just imagine, Dumnezeu nu mai e singur in Lume!
