--- a/Changelog/Changelog.txt
+++ b/Changelog/Changelog.txt
@@ -48,3 +48,8 @@ fara idei si motivatie din exterior...
 *Am mai bagat ceva la music player
 *Acum poti vorbi cu alte personaje
 *Just imagine, Dumnezeu nu mai e singur in Lume!
+
+17.09.2020:
+*Da, iar am uitat sa mai scriu
+*Te poti bate cu altii!
+*Poti face misiuni!
